--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <body>
 
     <header>
-        <div class="header1stRow">
+        <nav class="header1stRow">
             <div>Header Logo</div>
             <div class="firstRowLinks">
                 <div><a href="#">header link one</a></div>
                 <div><a href="#">header link two</a></div>
                 <div><a href="#">header link three</a></div>
             </div>
-        </div>
+        </nav>
 
         <div class="header2ndRow">
             <div>
@@ -33,6 +33,27 @@
             <div><img src="images/pexels-alessandro-avilés-renaldi-12434670.jpg" alt="an image"></div>
         </div>
     </header>
+
+    <!-- Random information section: -->
+
+    <section class="randomInfoSection">
+        <div>Some random information</div>
+
+        <div class="randomImages">
+            <div><img src="images/pexels-guillaume-meurice-2873669.jpg" alt="a space image"></div>
+            <div><img src="images/pexels-jeremy-müller-6444367.jpg" alt="a space image"></div>
+            <div><img src="images/pexels-luck-galindo-544268.jpg" alt="a space image"></div>
+            <div><img src="images/pexels-pixabay-39561.jpg" alt="a space image"></div>
+        </div>
+    </section>
+
+    <!-- Apothegm section: -->
+
+    <aside>
+        <div>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe
+            people will actually read it. Who knows? All I know is that it looks nice.</div>
+        <div>-Thor, God of Thunder</div>
+    </aside>
 
 </body>
 
