--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <!-- Random information section: -->
 
-    <section class="randomInfoSection">
+    <figure class="randomInfoSection">
         <div>Some random information</div>
 
         <div class="randomImages">
@@ -45,7 +45,7 @@
             <div><img src="images/pexels-luck-galindo-544268.jpg" alt="a space image"></div>
             <div><img src="images/pexels-pixabay-39561.jpg" alt="a space image"></div>
         </div>
-    </section>
+    </figure>
 
     <!-- Apothegm section: -->
 
@@ -54,6 +54,18 @@
             people will actually read it. Who knows? All I know is that it looks nice.</div>
         <div>-Thor, God of Thunder</div>
     </aside>
+
+    <!-- Last (call to action) section: -->
+
+    <section>
+        <div>Call to action! It's time!</div>
+        <div>Sign up for our product by clicking that button right over there!</div>
+        <button>Sign up</button>
+    </section>
+
+    <!-- Footer: -->
+
+    <footer>Copyright &copy; The Odin Project 2022</footer>
 
 </body>
 
