--- a/index.html
+++ b/index.html
@@ -13,18 +13,19 @@
 
     <header>
         <nav class="header1stRow">
-            <div>Header Logo</div>
+            <div class="headerLogoText">Header Logo</div>
             <div class="firstRowLinks">
-                <div><a href="#">header link one</a></div>
-                <div><a href="#">header link two</a></div>
-                <div><a href="#">header link three</a></div>
+                <div><a class="headerLinks" href="#">header link one</a></div>
+                <div><a class="headerLinks" href="#">header link two</a></div>
+                <div><a class="headerLinks" href="#">header link three</a></div>
             </div>
         </nav>
 
         <div class="header2ndRow">
-            <div>
-                <div>This website is awesome</div>
-                <div>This website has some subtext that goes here under the main title. It's a smaller font and the
+            <div class="textAndButton">
+                <div class="heroText">This website is awesome</div>
+                <div class="heroSecondaryText">This website has some subtext that goes here under the main title. It's a
+                    smaller font and the
                     color is
                     lower contrast</div>
                 <div><button>Sign up</button></div>
@@ -37,17 +38,21 @@
     <!-- Random information section: -->
 
     <figure class="randomInfoSection">
-        <div>Some random information</div>
+        <div class="informationHeader">Some random information.</div>
 
         <div class="randomImages">
-            <div><img src="images/pexels-guillaume-meurice-2873669.jpg" alt="a space image"></div>
-            <div><img src="images/pexels-jeremy-müller-6444367.jpg" alt="a space image"></div>
-            <div><img src="images/pexels-luck-galindo-544268.jpg" alt="a space image"></div>
-            <div><img src="images/pexels-pixabay-39561.jpg" alt="a space image"></div>
+            <div><img src="images/pexels-guillaume-meurice-2873669.jpg" alt="a space image">This is some subtext under
+                an illustration or image</div>
+            <div><img src="images/pexels-jeremy-müller-6444367.jpg" alt="a space image">This is some subtext under
+                an illustration or image</div>
+            <div><img src="images/pexels-luck-galindo-544268.jpg" alt="a space image">This is some subtext under
+                an illustration or image</div>
+            <div><img src="images/pexels-pixabay-39561.jpg" alt="a space image">This is some subtext under
+                an illustration or image</div>
         </div>
     </figure>
 
-    <!-- Apothegm section: -->
+    <!-- Quote section: -->
 
     <aside>
         <div>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe
