--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
     <!-- Quote section: -->
 
     <aside>
-        <div>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe
+        <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up
+            space, or maybe
             people will actually read it. Who knows? All I know is that it looks nice.</div>
-        <div>-Thor, God of Thunder</div>
+        <div class="thor">-Thor, God of Thunder</div>
     </aside>
 
     <!-- Last (call to action) section: -->
