--- a/index.html
+++ b/index.html
@@ -64,9 +64,15 @@
     <!-- Last (call to action) section: -->
 
     <section>
-        <div>Call to action! It's time!</div>
-        <div>Sign up for our product by clicking that button right over there!</div>
-        <button>Sign up</button>
+        <div class="callSectionDiv">
+            <div class="callTextArea">
+                <div id="callToAction1stLine">Call to action! It's time!</div>
+                <div>Sign up for our product by clicking that button right over there!</div>
+            </div>
+            <div class="callSectionButton"><button>Sign up</button></div>
+        </div>
+
+
     </section>
 
     <!-- Footer: -->
