add relevant info about space. This is the final commit.

--- a/index.html
+++ b/index.html
@@ -13,25 +13,30 @@
 
     <header>
         <nav class="header1stRow">
-            <div class="headerLogoText">Header Logo</div>
+            <div class="headerLogo"><img src="images/pexels-pixabay-2150.jpg" alt="logo"></div>
             <div class="firstRowLinks">
-                <div><a class="headerLinks" href="#">header link one</a></div>
-                <div><a class="headerLinks" href="#">header link two</a></div>
-                <div><a class="headerLinks" href="#">header link three</a></div>
+                <div><a class="headerLinks" href="https://www.nasa.gov/" target="_blank">NASA</a></div>
+                <div><a class="headerLinks" href="https://en.wikipedia.org/wiki/Outer_space"
+                        target="_blank">WIKIPEDIA</a></div>
+                <div><a class="headerLinks"
+                        href="https://www.google.com/search?q=space&sxsrf=ALiCzsaUtOG7jx5dfagH4CLmkZPnhfMEfw:1657723702301&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjh66SDjvb4AhVVVfEDHUfvAJgQ_AUoAXoECAEQAw"
+                        target="_blank">PHOTOS</a>
+                </div>
             </div>
         </nav>
 
         <div class="header2ndRow">
             <div class="textAndButton">
-                <div class="heroText">This website is awesome</div>
-                <div class="heroSecondaryText">This website has some subtext that goes here under the main title. It's a
-                    smaller font and the
-                    color is
-                    lower contrast</div>
+                <div class="heroText">Space is awesome</div>
+                <div class="heroSecondaryText">There are billions and billions of stars.
+                    Oh look!
+                    There are billions and billions of galaxies.
+                    Alright!
+                    There is nothing I like more than space.</div>
                 <div><button>Sign up</button></div>
             </div>
 
-            <div><img src="images/pexels-alessandro-avilés-renaldi-12434670.jpg" alt="an image"></div>
+            <div><img src="images/pexels-pixabay-73910.jpg" alt="an image"></div>
         </div>
     </header>
 
@@ -41,24 +46,25 @@
         <div class="informationHeader">Some random information.</div>
 
         <div class="randomImages">
-            <div><img src="images/pexels-guillaume-meurice-2873669.jpg" alt="a space image">This is some subtext under
-                an illustration or image</div>
-            <div><img src="images/pexels-jeremy-müller-6444367.jpg" alt="a space image">This is some subtext under
-                an illustration or image</div>
-            <div><img src="images/pexels-luck-galindo-544268.jpg" alt="a space image">This is some subtext under
-                an illustration or image</div>
-            <div><img src="images/pexels-pixabay-39561.jpg" alt="a space image">This is some subtext under
-                an illustration or image</div>
+            <div><img src="images/pexels-guillaume-meurice-2873669.jpg" alt="Timelapse of stars">Timelapse of stars at
+                night.
+            </div>
+            <div><img src="images/pexels-jeremy-müller-6444367.jpg" alt="A supernova">A supernova in a distant galaxy.
+            </div>
+            <div><img src="images/pexels-luck-galindo-544268.jpg" alt="Milky Way Galaxy">A photo of Milky Way
+                galaxy.</div>
+            <div><img src="images/pexels-pixabay-39561.jpg" alt="Solar flares">Solar flares in the Sun's atmosphere.
+            </div>
         </div>
     </figure>
 
     <!-- Quote section: -->
 
     <aside>
-        <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up
-            space, or maybe
-            people will actually read it. Who knows? All I know is that it looks nice.</div>
-        <div class="thor">-Thor, God of Thunder</div>
+        <div class="quote">Who are we? We find that we live on an insignificant planet of a humdrum star lost in a
+            galaxy tucked away in some forgotten corner of a universe in which there are far more galaxies than people.
+        </div>
+        <div class="thor">-Carl SAGAN</div>
     </aside>
 
     <!-- Last (call to action) section: -->
